--- a/package.xml
+++ b/package.xml
@@ -24,8 +24,10 @@
 	</excludedpackages>
 
 	<instructions type="install">
+		<instruction type="acpMenu"/>
 		<instruction type="acpTemplate"/>
 		<instruction type="file"/>
 		<instruction type="language"/>
+		<instruction type="userGroupOption"/>
 	</instructions>
 </package>
