--- a/package.xml
+++ b/package.xml
@@ -6,7 +6,7 @@
 		<packagename><![CDATA[All-Inkl Domain Administration]]></packagename>
 		<packagedescription><![CDATA[Adds a page for listing and modifying all-inclusive domains.]]></packagedescription>
 		<packagedescription language="de"><![CDATA[Fügt eine Seite zum auflisten und modifizieren von All-Inkl Domains.]]></packagedescription>
-		<version>1.0.0</version>
+		<version>1.0.1</version>
 		<date>2022-11-07</date>
 	</packageinformation>
 
@@ -15,12 +15,12 @@
 	</authorinformation>
 
 	<requiredpackages>
-		<requiredpackage minversion="5.3.0">com.woltlab.wcf</requiredpackage>
-		<requiredpackage minversion="1.0.0">de.xxschrandxx.wcs.kas-api</requiredpackage>
+		<requiredpackage minversion="6.0.0 Beta 1">com.woltlab.wcf</requiredpackage>
+		<requiredpackage minversion="1.0.1">de.xxschrandxx.wsc.kas-api</requiredpackage>
 	</requiredpackages>
 
 	<excludedpackages>
-		<excludedpackage version="6.0.0 Alpha 1">com.woltlab.wcf</excludedpackage>
+		<excludedpackage version="7.0.0 Alpha 1">com.woltlab.wcf</excludedpackage>
 	</excludedpackages>
 
 	<instructions type="install">
